--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-
+yarn.lock
+package-lock.json
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
@@ -58,6 +59,7 @@ yarn-error.log
 # Ruby / CocoaPods
 **/Pods/
 /vendor/bundle/
+Podfile.lock
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
