--- a/package.json
+++ b/package.json
@@ -3,15 +3,45 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "podinstall": "cd ios && pod install && cd..",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator 'iPhone 15 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "axios-logger": "^2.8.0",
+    "crypto-js": "^4.2.0",
+    "lottie-ios": "3.2.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-config": "^1.5.1",
+    "react-native-device-info": "^10.13.2",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-localization": "^2.3.2",
+    "react-native-lottie-splash-screen": "^1.1.2",
+    "react-native-paper": "^5.12.3",
+    "react-native-qrcode-svg": "^6.3.1",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux-batched-subscribe": "^0.1.6",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,14 +51,19 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.1",
+    "@types/react-test-renderer": "^18.3.0",
+    "@types/redux-batched-subscribe": "^0.1.7",
+    "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=18"
