--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lottie-ios": "3.2.3",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.1",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.13.2",
     "react-native-gesture-handler": "^2.16.2",
@@ -39,6 +39,7 @@
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.0.0",
     "react-redux": "^9.1.2",
     "redux-batched-subscribe": "^0.1.6",
     "redux-logger": "^3.0.6"
@@ -54,6 +55,7 @@
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.1",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "@types/redux-batched-subscribe": "^0.1.7",
     "@types/redux-logger": "^3.0.13",
