--- a/ios/fitness/Info.plist
+++ b/ios/fitness/Info.plist
@@ -69,5 +69,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Fitness and Health needs access to your Camera.</string>
 </dict>
 </plist>
