--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@candlefinance/faster-image": "^1.5.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -28,6 +29,7 @@
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.13.2",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-localization": "^2.3.2",
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-paper": "^5.12.3",
@@ -40,6 +42,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^6.0.0",
+    "react-native-vision-camera": "^4.0.5",
     "react-redux": "^9.1.2",
     "redux-batched-subscribe": "^0.1.6",
     "redux-logger": "^3.0.6"
